updated premiere page

--- a/developer.css
+++ b/developer.css
@@ -411,8 +411,33 @@ main h3{
         font-size:48.6%;
     }
 }
-@media screen and (max-width:300px){
-    HTML{
-        font-size:34.7%;
+
+@media screen and (max-width:480px){
+    h1{
+        font-size:4.0rem;
+        text-transform:capitalize;
+    }
+    h2{
+        font-size:3.2rem;
+        text-transform:capitalize;
+    }
+    h3{
+        font-size:2.8rem;
+        text-transform:capitalize;
+    }
+    h4{
+        font-size:2.4rem;
+        text-transform:capitalize;
+    }
+    h5{
+        font-size:2.0rem;
+        text-transform:capitalize;
+    }
+    h6{
+        font-size:1.8rem;
+        text-transform:capitalize;
+    }
+    p, input, a{
+        font-size:1.6rem;
     }
 }
